classDiagram
    class Agent {
        -Long id
        -String name
        -String modelType
        -String status
        -Map<String, Object> config
        -LocalDateTime createdAt
        +createAgent(AgentDTO)
        +updateAgent(Long, AgentDTO)
        +getAgentById(Long)
        +assignTask(Long, TaskDTO)
    }

    class AgentRole {
        -Long id
        -Long agentId
        -String roleName
        -Integer experienceYears
        -Map<String, Object> capabilities
        +assignRole(Long, RoleDTO)
        +updateCapabilities(Long, Map)
    }

    class Project {
        -Long id
        -String name
        -String description
        -String status
        -LocalDateTime startTime
        -LocalDateTime endTime
        +createProject(ProjectDTO)
        +updateStatus(Long, String)
        +assignTeam(Long, List<Long>)
    }

    class Task {
        -Long id
        -Long projectId
        -String title
        -String description
        -String status
        -LocalDateTime deadline
        +createTask(TaskDTO)
        +updateStatus(Long, String)
        +assignAgent(Long, Long)
    }

    class LLMAdapter {
        -String modelType
        -Map<String, Object> configuration
        +initialize()
        +sendPrompt(String)
        +streamResponse(String)
    }

    class KnowledgeBase {
        -String domain
        -Map<String, Object> knowledgeGraph
        +updateKnowledge(String, Object)
        +queryKnowledge(String)
        +validateResponse(String)
    }

    Agent "1" -- "*" AgentRole
    Agent "*" -- "*" Task
    Project "1" -- "*" Task
    Agent -- LLMAdapter
    Agent -- KnowledgeBase